cleared code